# OOP_homeworks

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  Evaluacion.cpp  Evaluacion.h  Hogar.cpp  Hogar.h  Huesped.cpp  Huesped.h  Main.cpp  Persona.cpp  Persona.h  Propietario.cpp  Propietario.h  Reserva.cpp  Reserva.h  Sistema.cpp  Sistema.h
test/: CMakeLists.txt  basicTest.cpp
